# eureka

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  fly.toml  package-lock.json  package.json  tailwind.config.cjs
.github/workflows/: audit.yml  general.yml
.sqlx/: query-298e6f80b7bde8a2bab2c303f7e547ad55b0b217770d7bfe6ced9b30eb78246a.json  query-2a30446725f6c9153a751b764b55c34cd5c47d083d50c93258e8434459d317e0.json  query-2aef4f7decb687fea8eaab6d5c868492790db125e05cbbf87c7e0dcf01b2670b.json  query-35c08f725f849f901ef85e52a41432927140fb976b9930befea1350898dac8da.json  query-51a444dff97444105c040d280c978c739fef4606feb1eebd227a63ce4578e545.json  query-6807151df0cbfbc8e1e3331340c4bfb82cccb855ce8c07d93ec7bddcd5890dff.json  query-74b38d343e85bb4cc6464f2e8282d3c003a25a091b9564cea53e7af9709ec877.json  query-948ec9faf828573fcaf4f7833f72deee03cddc1efab0256e355b02a7c4ce889d.json  query-9ef1f6f51144deea38ae319349b1d50b56cdbeca4dff32f8851291b4169941a0.json  query-fda240a1527a34922286aa3651cd24937fc5eb3ab2007467c023193a2a55338b.json
assets/: main.css  main.js
configuration/: base.yml  local.yml  production.yml
migrations/: 20240406212752_create_ideas_table.sql  20240413172720_grant_fly_user_permissions.sql  20240421143557_Create_users_table.sql  20240421145100_add_unique_constraint_on_user_email.sql  20240421162211_add_sessions_table.sql  20240421163005_add_unique_constraint_on_user_id_in_sessions_table.sql  20240422183417_add_user_column_to_idea.sql  20240422193744_remove_unique_constraint_on_user_id_in_ideas_table.sql  20240429183320_create_story_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: idea.rs  mod.rs  page.rs  user.rs
src/features/: mod.rs
src/features/auth/: app_user_extractor.rs  auth_error.rs  get_login_page.rs  handle_login.rs  handler.rs  middleware.rs  mod.rs  views.rs
src/features/create_idea/: handler.rs  mod.rs  views.rs
src/features/create_story/: mod.rs
src/features/health_check/: mod.rs
src/features/idea_list/: handler.rs  views.rs
src/features/view_idea/: handler.rs  mod.rs  views.rs
supabase/: config.toml
supabase/migrations/: 20240401201742_create_ideas_table.sql
templates/: base.html  idea-card-macro.html  idea-card.html  index.html
tests/: health_check.rs  new_idea.rs  startup.rs  view_idea.rs  view_idea_list.rs
tests/features/: auth.rs  health_check.rs  helpers.rs  main.rs  new_idea.rs  stories.rs  view_idea.rs  view_idea_list.rs
