[package]
name = "eureka"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "eureka"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["form"] }
chrono = { version = "0.4.37", default-features = false, features = ["clock"] }
config = "0.14.0"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false 
features = [
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "postgres",
    "uuid",
    "chrono"
]

[dev-dependencies]
reqwest = "0.12.3"
